feat: ajuste no exception